# rounds

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
ai-demo-knowledge/: architecture-overview.md  business-rules.md  common-demo-scenarios.md  data-model-reference.md  frequently-asked-questions.md  glossary.md  integrations.md  knowledge-graph.json  knowledge-graph.md  known-limitations.md  module-catalog.md  permissions.md  product-overview.md  reporting.md  status-dictionary.md  terminology.md  workflows.md
app/: auth.py  config.py  db.py  main.py  prompts.py
docs/: BUSINESS_RULES.md  DEVELOPER_GUIDE.md  PHASES.md  SPEC.md  UPLIFT_REPORT_2026-06-05.md  gap-analysis.md  port-source-gap-analysis.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
help-center/: chat-and-polls.md  dashboard.md  discrepancies.md  editor.md  exports.md  help-center.md  improvements.md  login-and-access.md  processing.md  session-detail.md  sessions.md  settings.md  sop-workflow.md  speakers.md  troubleshooting.md  upload.md  viewer.md
migrations/: .gitkeep  000_fix_corrections_collision.sql  001_init.sql  002_discrepancies.sql  003_sop.sql  004_audit.sql  005_improvements.sql  006_settings.sql  008_chat_polls.sql  009_session_templates.sql  010_state_machine.sql  011_manifest.sql  012_normalize.sql  013_fusion.sql  014_align.sql  015_words.sql  016_bullets.sql  017_discrepancies_full.sql  018_artifacts.sql  019_iil_learning.sql  020_segment_content_hash.sql  021_iil_features.sql  022_segment_seq_index.sql  023_artifact_versions.sql  024_session_audit_finalized.sql  025_kp_annotations_kp04.sql  026_validation_repair_columns.sql  027_default_gcs_upload_backend.sql  028_session_templates_default_pro.sql  029_corrections.sql  030_email_attempts.sql  031_seed_settings_types.sql  032_seed_people_and_groups.sql  033_fix_deprecated_classify_model.sql  034_fix_kp_annotations_unique.sql  035_drop_sessions_code_unique.sql  036_word_alignment.sql  037_backfill_poll_anchors.sql  038_session_types_is_default.sql  039_seed_session_types.sql  (+21 more)
scripts/: audit_insert_paths.py  migrate.py  seed-admin.sql.example  (+3 more)
(+440 files in other folders)
